# algovis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_NOTES.md  README.md  README_PYPI.md  mkdocs.yml  pyproject.toml  requirements.txt  test.py  test_read.md
algovis/: __init__.py
algovis/searching/: __init__.py  _animate_search.py  _base_class_search.py  _timer.py  binarysearch.py  linearsearch.py
algovis/searching/_markdown_files/: binarysearch.md  linearsearch.md
algovis/sorting/: __init__.py  _animation.py  _base_class.py  _base_sorting.py  _timer.py  a.py  bubblesort.py  insertionsort.py  mergesort.py  quicksort.py  selectionsort.py  testing.py
algovis/sorting/_markdown_files/: bubblesort.md  insertionsort.md  mergesort.md  quicksort.md  selectionsort.md
docs/: index.md  installing.md  mkdocs.yml
docs/docs/: index.md  installing.md  searching.md  sorting.md
docs/docs/about/: about.md
docs/docs/sorting/: bubblesort.md  quicksort.md
tests/: test_algovis.py
