[tool.poetry]
name = "algovis"
version = "0.1.3"
description = "A Python library for visualising algorithms"
readme = "README_PYPI.md"
authors = ["hotshot07 <aroram@tcd.ie>"]
maintainers = ["hotshot07 <aroram@tcd.ie>"]
repository = "https://github.com/hotshot07/algovis"
license = "AGPL-3.0"
keywords = ["Poetry",
            "Visualization",
            "Algorithms",
            "Sorting",
            "Searching"]


[tool.poetry.dependencies]
python = "^3.7.0"
matplotlib = "^3.2.1"
rich = "^3.3.1"
mkdocs = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
